--- a/frontend/src/app/pages/usuario/editar-usuario/editar-usuario.component.html
+++ b/frontend/src/app/pages/usuario/editar-usuario/editar-usuario.component.html
@@ -1,6 +1,6 @@
 <div class="modal-body">
   <div class="container">
-    <form #nuevoForm="ngForm">
+    <form #actualizarForm="ngForm" (ngSubmit)="Actualizar(actualizarForm.value)">
       <div class="mb-3">
         <label for="input-nombre" class="form-label">Nombre</label>
         <input
@@ -8,10 +8,10 @@
           class="form-control"
           name="nombre"
           id="input-nombre"
-          placeholder="Nombre"
-          ngModel
+          [(ngModel)]="usuario.nombre"
           required
         />
+        <input type="hidden" name="id" [(ngModel)]="usuario.id"/>
       </div>
       <div class="mb-3">
         <label for="input-apellido" class="form-label">Apellido</label>
@@ -20,8 +20,7 @@
           class="form-control"
           name="apellido"
           id="input-apellido"
-          placeholder="Apellido"
-          ngModel
+          [(ngModel)]="usuario.apellido"
           required
         />
       </div>
@@ -32,8 +31,7 @@
           class="form-control"
           name="correo"
           id="input-email"
-          placeholder="name@example.com"
-          ngModel
+          [(ngModel)]="usuario.correo"
           required
         />
       </div>
@@ -44,21 +42,20 @@
           class="form-control"
           name="clave"
           id="input-clave"
-          placeholder="clave"
-          ngModel
-          required
+          placeholder="**************"
+          disabled="true"
         />
       </div>
       <div class="mb-3">
         <label for="input-roles" class="form-label">Roles</label>
-        <select class="form-select" name="roles" id="input-roles" ngModel>
+        <select class="form-select" name="roles" id="input-roles" [(ngModel)]="usuario.roles">
           <option value="ROLE_ADMIN">ADMINISTRADOR</option>
           <option value="ROLE_USER" selected>USUARIO</option>
         </select>
       </div>
       <div class="mb-3">
         <label for="input-estado" class="form-label">Estado</label>
-        <select class="form-select" name="estado" id="input-estado" ngModel>
+        <select class="form-select" name="estado" id="input-estado" [(ngModel)]="usuario.estado">
           <option value="A">Activo</option>
           <option value="I">Inactivo</option>
         </select>
@@ -72,5 +69,8 @@
         </button>
       </div>
     </form>
+    <button type="button" class="btn btn-info" (click)="volver()">
+      Volver
+    </button>
   </div>
 </div>
